[package]
name = "deadline"
version = "0.5.4"
edition = "2024"
repository = "https://github.com/ngpal/deadline"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.1.1"
directories = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[package.metadata.release]
tag = true
push = true
tag-name = "v{{version}}"
pre-release-commit-message = "release: {{version}}"
publish = false

[profile.dist]
inherits = "release"
lto = "thin"
